--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,12 @@
-/* Created by:  Dang
+/* Created by: Mr. Coxall
 * Created on: Sep 2020
 * This file contains the CSS for index.html
 */
+.mdl-layout__content {
+  padding-left: 15pt;
+  padding-right: 15pt;
+  padding-top: 15pt;
+}
 
 /* Due to error in MDL : https://github.com/google/material-design-lite/issues/5281
 */
@@ -10,27 +15,13 @@
   opacity: 0.001;
 }
 
-.mdl-layout__header-row {
-  justify-content: center;
-  padding: 0;
-}
-
-.mdl-layout__content {
-  padding-left: 15pt;
-  padding-right: 15pt;
-  padding-top: 15pt;
-}
-
-.mdl-textfield__error {
-  color: lightgreen;
-}
-
-.page-content {
-  color: cornflowerblue;
-  font-family: Helvetica, Arial, sans-serif;
-  font-size: 1.25rem;
-}
-
 body {
   background-color: white;
+}
+
+p {
+  color: cornflowerblue;
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 1.5rem;
+  padding-top: 5pt;
 }
